[DREM-11]コンテンツ詳細画面(他サービス、画面表示)
ページャタブ部分のデータ準備

Change-Id: Iff5c3809b30ad8a514e03f0e332ac9bb22e15e43

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/tv_player_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/tv_player_main_layout.xml
@@ -8,9 +8,9 @@
     <!-- コンテンツ詳細用のヘッダ を読み込む -->
     <RelativeLayout
         android:id="@+id/contents_detail_header"
-        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
 
         <include layout="@layout/contents_detail_header_layout" />
     </RelativeLayout>
@@ -18,9 +18,9 @@
     <!--コンテンツ詳細のスクロール部分-->
     <ScrollView
         android:id="@+id/contents_detail_scroll_view"
-        android:layout_below="@+id/contents_detail_header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/contents_detail_header">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,6 +34,15 @@
 
                 <!--TODO:ここにActivityからサムネイル又はプレイヤーをセット-->
             </RelativeLayout>
+
+            <HorizontalScrollView
+                android:id="@+id/contents_detail_tab_strip_scroll"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/contents_tab_height"
+                android:background="@android:color/background_dark"
+                android:fillViewport="true"
+                android:foregroundGravity="center_horizontal"
+                android:scrollbars="none" />
 
             <!--タブ用ViewPager-->
             <android.support.v4.view.ViewPager
