DREM-8 ビデオ一覧 実装(UI,DP,DM) ・進捗コミット（JSONサンプルデータの削除）
Change-Id: Icc18cd3741cdc6b0c7c7d53f0f9c0894146c56cd

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -28,6 +28,8 @@
     <color name="ranking_list_border">#888888</color>
     <color name="ranking_no_text">#FFFFFF</color>
     <color name="ranking_no_background">#000000</color>
+    <!-- ビデオ一覧 -->
+    <color name="video_list_text">#FFFFFF</color>
 
     <!--コンテンツ詳細-->
     <color name="contents_header_background">#000000</color>
