--- a/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
@@ -11,21 +10,19 @@
         android:id="@+id/genre_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/video_contents_genre_title_margin_strat"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:text="ジャンル名"/>
+        android:textColor="@color/video_list_text" />
 
     <TextView
         android:id="@+id/genre_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="3dp"
+        android:layout_marginEnd="@dimen/video_contents_genre_count_margin_end"
         android:layout_toLeftOf="@+id/genre_button"
-        android:maxLines="1"
-        android:text="11111111123"/>
+        android:textColor="@color/video_list_text" />
 
     <TextView
         android:id="@+id/genre_button"
@@ -33,13 +30,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        android:text="@string/list_transition"/>
+        android:layout_marginEnd="@dimen/video_contents_genre_button_margin_end"
+        android:text="@string/list_transition"
+        android:textColor="@color/video_list_text" />
 
     <TextView
         android:id="@+id/item_common_result_line"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/video_list_text" />
 
 </RelativeLayout>
