--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -6,7 +6,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/contents_tab_left_margin"
+    android:paddingLeft="@dimen/contents_tab_side_margin"
+    android:paddingRight="@dimen/contents_tab_side_margin"
     android:paddingTop="@dimen/contents_tab_top_margin">
 
     <TextView
@@ -26,23 +27,28 @@
         android:layout_below="@+id/service_provider"
         android:textColor="@color/white_text" />
 
-    <TextView
-        android:id="@+id/contents_detail_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+    <LinearLayout
+        android:id="@+id/contents_detail_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/contents_title"
-        android:ellipsize="end"
-        android:maxLines="4"
-        android:textColor="@color/white_text" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/more_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/contents_title"
-        android:layout_toEndOf="@+id/contents_detail_info"
-        android:clickable="true"
-        android:text="@string/contents_info_more_text"
-        android:textColor="@color/white_text" />
+        <TextView
+            android:id="@+id/contents_detail_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="4"
+            android:textColor="@color/white_text" />
+
+        <TextView
+            android:id="@+id/more_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:gravity="end"
+            android:text="@string/contents_info_more_text"
+            android:textColor="@color/white_text" />
+    </LinearLayout>
 </RelativeLayout>
