--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
@@ -31,7 +30,8 @@
             android:orientation="vertical">
 
             <!--サムネイル用レイアウト-->
-            <RelativeLayout android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <!--サムネイル画像-->
@@ -75,8 +75,7 @@
             <android.support.v4.view.ViewPager
                 android:id="@+id/contents_detail_result"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:layout_below="@id/contents_detail_tab_strip_scroll" />
+                android:layout_height="500dp" />
         </LinearLayout>
     </ScrollView>
 
