--- a/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
@@ -41,4 +41,12 @@
         android:layout_alignParentBottom="true"
         android:textColor="@color/video_list_text" />
 
+    <TextView
+        android:id="@+id/genre_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:textColor="@color/video_list_text" />
+
 </RelativeLayout>
