([DREM-11]コンテンツ詳細画面(他サービス、画面表示)) 実装(UI,DP,DM)
レイアウトサイズ調整、省略文が発生した時の対応

Change-Id: Id87c13d6bc825e8fbad823645b3b124ef8be7f59

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
@@ -1,29 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/contents_header_height_size"
-    android:background="@color/contents_header_background">
+    android:background="@color/contents_header_background"
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/back_key"
         android:layout_width="@dimen/contents_back_key_size"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:gravity="center"
         android:text="@string/back_key"
         android:textColor="@color/white_text"
+        android:textSize="@dimen/contents_header_back_button_size"
+        android:textStyle="bold"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/header_layout_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_weight="1"
+        android:maxLines="1"
         android:textColor="@color/white_text"
         android:textSize="@dimen/header_title_text_size"
         android:textStyle="bold" />
@@ -32,10 +34,9 @@
         android:id="@+id/close_key"
         android:layout_width="@dimen/contents_close_key_size"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:gravity="center"
         android:text="@string/close_key"
         android:textColor="@color/white_text"
+        android:textSize="@dimen/contents_header_close_button_size"
         android:visibility="visible" />
-</RelativeLayout>
+</LinearLayout>
