--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -8,14 +8,18 @@
     <dimen name="header_title_text_size">17sp</dimen>
 
     <!--コンテンツ詳細-->
+    <dimen name="contents_header_close_button_size">30sp</dimen>
+    <dimen name="contents_header_back_button_size">20sp</dimen>
     <dimen name="contents_header_height_size">40dp</dimen>
     <dimen name="contents_back_key_size">50dp</dimen>
     <dimen name="contents_close_key_size">50dp</dimen>
     <dimen name="contents_key_padding_size">12dp</dimen>
     <dimen name="contents_view_text_margin">10dp</dimen>
     <dimen name="contents_tab_side_margin">30dp</dimen>
-    <dimen name="contents_tab_top_margin">10dp</dimen>
+    <dimen name="contents_tab_top_margin">0dp</dimen>
     <dimen name="contents_tab_height">50dp</dimen>
+    <dimen name="contents_service_name_side_margin">10dp</dimen>
+    <dimen name="contents_text_vertical_margin">10dp</dimen>
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">8dp</dimen>
