--- a/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
@@ -16,7 +16,7 @@
         android:textColor="@color/video_list_text" />
 
     <TextView
-        android:id="@+id/genre_count"
+        android:id="@+id/content_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -39,14 +39,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/video_list_text" />
-
-    <TextView
-        android:id="@+id/genre_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:visibility="gone"
         android:textColor="@color/video_list_text" />
 
 </RelativeLayout>
