([DREM-11]コンテンツ詳細画面(他サービス、画面表示)) 実装(UI,DP,DM)
データ取得～画面表示までを実装

Change-Id: Ie3e6aaf447a5227d17939322cca411ba9f1a51a6

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="contents_tab_height">50dp</dimen>
     <dimen name="contents_service_name_side_margin">10dp</dimen>
     <dimen name="contents_text_vertical_margin">10dp</dimen>
+    <dimen name="view_button_size">80dp</dimen>
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">8dp</dimen>
