--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -31,6 +31,7 @@
 
             <!--サムネイル用レイアウト-->
             <RelativeLayout
+                android:id="@+id/dtv_contents_detail_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -42,24 +43,24 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:contentDescription="@string/contents_info_thumbnail_text"
-                    android:src="@mipmap/home_pr" />
+                    android:src="@mipmap/loading" />
 
                 <!--中央ボタン画像-->
                 <ImageView
                     android:id="@+id/dtv_contents_view_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:contentDescription="@string/contents_info_thumbnail_text"
+                    android:layout_width="@dimen/view_button_size"
+                    android:layout_height="@dimen/view_button_size"
+                    android:layout_centerInParent="true"
+                    android:contentDescription="@string/contents_info_thumbnail_button"
                     android:src="@mipmap/ic_launcher" />
 
                 <!--テキスト-->
                 <TextView
-                    android:id="@+id/description_text"
+                    android:id="@+id/view_contents_button_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/dtv_contents_view_button"
+                    android:textColor="@color/white_text"
                     android:layout_centerHorizontal="true" />
             </RelativeLayout>
 
