--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/header_layout_back"
         android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:gravity="center"
         android:text="く"
@@ -17,26 +17,29 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/header_layout_display"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:contentDescription="@null"
             android:layout_centerVertical="true"
-            android:src="@drawable/tvicon"
+            android:src="@mipmap/ic_personal_video_white_24dp"
             android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/header_layout_menu"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="15dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:contentDescription="@null"
             android:layout_centerVertical="true"
-            android:src="@drawable/mene"
+            android:src="@mipmap/ic_menu_white_24dp"
             android:visibility="invisible" />
     </LinearLayout>
 
