--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
@@ -17,15 +17,16 @@
         android:text="@string/back_key"
         android:textColor="@color/white_text"
         android:textSize="@dimen/contents_header_back_button_size"
-        android:textStyle="bold"
-        android:visibility="visible" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/header_layout_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:ellipsize="end"
         android:maxLines="1"
+        android:gravity="center_horizontal"
         android:textColor="@color/white_text"
         android:textSize="@dimen/header_title_text_size"
         android:textStyle="bold" />
@@ -38,5 +39,5 @@
         android:text="@string/close_key"
         android:textColor="@color/white_text"
         android:textSize="@dimen/contents_header_close_button_size"
-        android:visibility="visible" />
+        android:textStyle="bold" />
 </LinearLayout>
