--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -25,8 +25,9 @@
         android:layout_below="@+id/contents_detail_header">
 
         <LinearLayout
+            android:id="@+id/contents_detail_scroll_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <!--サムネイル用レイアウト-->
@@ -43,40 +44,48 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:contentDescription="@string/contents_info_thumbnail_text"
+                    android:scaleType="fitXY"
                     android:src="@mipmap/loading" />
 
-                <!--中央ボタン画像-->
-                <ImageView
-                    android:id="@+id/dtv_contents_view_button"
-                    android:layout_width="@dimen/view_button_size"
-                    android:layout_height="@dimen/view_button_size"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:contentDescription="@string/contents_info_thumbnail_button"
-                    android:src="@mipmap/ic_launcher" />
+                    android:orientation="vertical">
+                    <!--中央ボタン画像-->
+                    <ImageView
+                        android:id="@+id/dtv_contents_view_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:contentDescription="@string/contents_info_thumbnail_button"
+                        android:src="@mipmap/ic_launcher" />
 
-                <!--テキスト-->
-                <TextView
-                    android:id="@+id/view_contents_button_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/dtv_contents_view_button"
-                    android:textColor="@color/white_text"
-                    android:layout_centerHorizontal="true" />
+                    <!--テキスト-->
+                    <TextView
+                        android:id="@+id/view_contents_button_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textColor="@color/white_text" />
+                </LinearLayout>
             </RelativeLayout>
 
             <HorizontalScrollView
                 android:id="@+id/contents_detail_tab_strip_scroll"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/contents_detail_tabs_height"
+                android:layout_marginBottom="@dimen/contents_text_vertical_margin"
+                android:layout_marginTop="@dimen/contents_text_vertical_margin"
                 android:background="@android:color/background_dark"
                 android:fillViewport="true"
                 android:foregroundGravity="center_horizontal"
                 android:scrollbars="none" />
 
-            <android.support.v4.view.ViewPager
+            <com.nttdocomo.android.tvterminalapp.view.ContentsDetailViewPager
                 android:id="@+id/contents_detail_result"
                 android:layout_width="match_parent"
-                android:layout_height="500dp" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 
