--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="menuList">#000000</color>
     <color name="menuListProgramTitle">#FFFFFF</color>
     <color name="white_text">#FFFFFF</color>
+    <color name="gray_text">#7f7f7f</color>
+    <color name="disable_tab_background">#111111</color>
     <!-- キーワード検索 -->
     <color name="keyword_search_background">#EEEEEE</color>
     <color name="keyword_search_hint">#888888</color>
