--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -2,8 +2,9 @@
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/default_layout_style"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,8 +12,7 @@
     <RelativeLayout
         android:id="@+id/contents_detail_header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:layout_height="wrap_content">
 
         <include layout="@layout/contents_detail_header_layout" />
     </RelativeLayout>
@@ -20,14 +20,14 @@
     <!--コンテンツ詳細のスクロール部分-->
     <ScrollView
         android:id="@+id/contents_detail_scroll_view"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/contents_detail_header">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/contents_detail_scroll_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <!--サムネイル用レイアウト-->
@@ -93,12 +93,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:gravity="bottom">
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/change_remote_controller_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/remote_control_start" />
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
