--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -28,5 +28,6 @@
     <dimen name="video_contents_genre_button_margin_end">8dp</dimen>
     <dimen name="video_contents_genre_count_margin_end">3dp</dimen>
     <dimen name="video_contents_genre_title_margin_start">8dp</dimen>
+    <dimen name="video_contents_genre_text_size">20dp</dimen>
 
 </resources>
