[DREM-11]コンテンツ詳細画面(他サービス、画面表示)
TvPlayerActivityを元に戻した
リモコン遷移ボタンの処理を追加した
サムネイル中央画像に透過処理を施した

Change-Id: I204f93bf8362fdd05026273133f74f2c4e7a1520

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -57,6 +57,7 @@
                         android:id="@+id/dtv_contents_view_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:alpha="0.5"
                         android:layout_gravity="center_horizontal"
                         android:contentDescription="@string/contents_info_thumbnail_button"
                         android:src="@mipmap/ic_launcher" />
@@ -99,6 +100,7 @@
             android:id="@+id/change_remote_controller_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="remoteControlButton"
             android:text="@string/remote_control_start" />
     </RelativeLayout>
 </LinearLayout>
