DREM-475 ([DREM-24]録画予約一覧) 実装(UI,DP,DM)
動作確認実施、レイアウト及びロジック修正
不要なコメントアウトを削除

ログの埋め込み
UI 実装
・コールバックレスポンスデータのset：実装済み
・ページング：実装済み
・コンポーネント共通化：実装済み
DP実装
・WebClientコールバック：実装済み
・UIへのコールバック：実装済み
・リモートへのリクエスト：実装済み
・チャンネル一覧の取得とキャッシュ処理：実装済み
・突合：実装済み
・開始時間の算出等の処理：実装済み
・ソート：実装済み

Change-Id: Ib7b7877660455e1280adb4a39d9d7b3c2bc35bb2

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -56,8 +56,9 @@
             android:layout_width="@dimen/recording_reservation_list_status_width"
             android:layout_height="@dimen/recording_reservation_list_status_height"
             android:layout_marginEnd="@dimen/recording_reservation_list_status_margin_end"
-            android:gravity="center_vertical"
+            android:gravity="center_vertical|center_horizontal"
             android:background="#FFFFFF"
+            android:textSize="@dimen/list_item_recording_reservation_status_text_size"
             android:visibility="gone" />
     </RelativeLayout>
 
