--- a/dTVTerminalApp/app/src/main/res/drawable/program_end_gray.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/program_end_gray.xml
@@ -9,7 +9,7 @@
             <solid android:color="#000000" />
         </shape>
     </item>
-    <item android:left="1.5dp" android:bottom="1.5dp">
+    <item android:left="1.5dp" android:top="1.5dp" android:bottom="1.5dp">
     <shape>
         <solid android:color="#AAAAAA" />
     </shape>
