--- a/dTVTerminalApp/app/src/main/res/drawable/program_rectangele_end.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/program_rectangele_end.xml
@@ -8,7 +8,7 @@
             <solid android:color="#000000" />
         </shape>
     </item>
-    <item android:left="1.5dp" android:bottom="1.5dp">
+    <item android:left="1.5dp" android:top="1.5dp" android:bottom="1.5dp">
     <shape>
         <solid android:color="#222222" />
     </shape>
