--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -10,32 +10,35 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:clickable="true"
         android:gravity="center"
-        android:text="く"
+        android:onClick="contentsDetailBackKey"
+        android:text="@string/back_key"
         android:textColor="#FFFFFF"
         android:visibility="visible" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:paddingTop="12dp"
+        android:orientation="horizontal"
         android:paddingBottom="12dp"
-        android:orientation="horizontal">
+        android:paddingTop="12dp">
 
         <ImageView
             android:id="@+id/header_layout_display"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
+            android:contentDescription="@string/tv_icon_description"
             android:src="@drawable/tvicon"
             android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/header_layout_menu"
-            android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:contentDescription="@string/menu_icon_description"
             android:src="@drawable/mene"
             android:visibility="invisible" />
     </LinearLayout>
@@ -46,6 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="#FFFFFF"
-        android:textSize="17dp"
+        android:textSize="@dimen/header_title_text_size"
         android:textStyle="bold" />
 </RelativeLayout>
