DREM-8 ビデオ一覧 実装(UI,DP,DM) ・レイアウト修正 ・WebApiから情報を取得 ・Activityに送るデータの生成 ・受け取った情報の画面表示
Change-Id: I3e68d3b86d90547e8a8344af1e967b198578f5da

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/video_genre_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/video_genre_main_layout.xml
@@ -10,8 +10,8 @@
         android:id="@+id/genre_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@drawable/list_item_divider"
-        android:dividerHeight="1dp">
+        android:divider="@drawable/video_list_item_divider"
+        android:dividerHeight="@dimen/video_contents_divider_divider_height">
     </ListView>
 
 </LinearLayout>
