--- a/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/video/layout/item_video_genre.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/video_contents_genre_title_margin_start"
+        android:layout_marginTop="@dimen/video_contents_genre_title_margin_top"
         android:ellipsize="end"
+        android:textStyle="bold"
         android:textSize="@dimen/video_contents_genre_text_size"
         android:textColor="@color/video_list_text" />
 
@@ -23,7 +25,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/video_contents_genre_count_margin_end"
         android:layout_toLeftOf="@+id/genre_button"
-        android:textSize="@dimen/video_contents_genre_text_size"
+        android:textSize="@dimen/video_contents_genre_num_size"
         android:textColor="@color/video_list_text" />
 
     <TextView
@@ -34,7 +36,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/video_contents_genre_button_margin_end"
         android:text="@string/list_transition"
-        android:textSize="@dimen/video_contents_genre_text_size"
+        android:textSize="@dimen/video_contents_genre_num_size"
         android:textColor="@color/video_list_text" />
 
     <TextView
