--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
@@ -17,9 +17,7 @@
         android:gravity="center"
         android:onClick="contentsDetailBackKey"
         android:text="@string/back_key"
-        android:textColor="@color/white_text"
-        android:textSize="@dimen/contents_header_back_button_size"
-        android:textStyle="bold" />
+        android:textColor="@color/white_text" />
 
     <TextView
         android:id="@+id/header_layout_title"
@@ -41,7 +39,5 @@
         android:gravity="center"
         android:onClick="contentsDetailCloseKey"
         android:text="@string/close_key"
-        android:textColor="@color/white_text"
-        android:textSize="@dimen/contents_header_close_button_size"
-        android:textStyle="bold" />
+        android:textColor="@color/white_text" />
 </LinearLayout>
