--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:clickable="true"
         android:onClick="contentsDetailBackKey"
-        android:text="‚­"
+        android:text="ï¼œ"
         android:textColor="#FFFFFF"
         android:visibility="visible" />
     <LinearLayout
@@ -25,8 +25,6 @@
         android:paddingBottom="12dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -35,8 +33,6 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
-            android:layout_centerVertical="true"
-            android:src="@drawable/tvicon"
             android:src="@mipmap/ic_personal_video_white_24dp"
             android:visibility="invisible" />
 
@@ -46,11 +42,8 @@
             android:layout_marginStart="15dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-
             android:contentDescription="@null"
             android:layout_centerVertical="true"
-            android:src="@drawable/mene"
             android:src="@mipmap/ic_menu_white_24dp"
             android:visibility="invisible" />
     </LinearLayout>
