--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    style="@style/default_layout_style"
+    android:background="#000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="#FF0000">
-        <TextView
-            android:id="@+id/titleSTBConnectActivity"
+        android:layout_height="100dp"
+        android:layout_marginTop="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/relativeLayout1">
+        <ImageView
+            android:id="@+id/paring_connecting_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/str_stb_connect_title"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-    </RelativeLayout>
+            android:src="@drawable/paring_connecting_icon"
+            android:baselineAlignBottom="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp" />
 
-    <Button
-        android:id="@+id/infoSTBConnectActivity"
-        android:layout_width="match_parent"
+    </RelativeLayout>
+    <TextView
+        android:id="@+id/connect_result_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/str_stb_connect_success_text"
         android:textColor="#FFFFFF"
-        android:text="STBとペアリング中..." />
-</LinearLayout>
+        android:textSize="15sp"
+        android:layout_below="@+id/relativeLayout1"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"/>
+</RelativeLayout>
